Task #8359: Fixed layout problems with firefox browsers.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,10 @@
 
 // Examples of using the icon mixin:
 // @include icon('user');
+
+/* 
+ * fix firefox bug: FieldSets are not shownin firefox 
+ */
+.x-firefox .x-stretched.x-dock-vertical > .x-dock-body {
+	height: auto;
+}
